[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/desktop-ui/Menubar.gd" type="Script" id=1]
[ext_resource path="res://src/desktop-ui/DesktopUI.gd" type="Script" id=2]

[node name="DesktopUI" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Toolbar" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -190.5
margin_top = 10.0
margin_right = 190.5
margin_bottom = 34.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Toolbar"]
margin_left = 7.0
margin_top = 7.0
margin_right = 374.0
margin_bottom = 27.0

[node name="GameButton" type="MenuButton" parent="Toolbar/HBoxContainer"]
margin_right = 50.0
margin_bottom = 20.0
text = "Game"

[node name="VSeparator" type="VSeparator" parent="Toolbar/HBoxContainer"]
margin_left = 54.0
margin_right = 58.0
margin_bottom = 20.0

[node name="ConstructionButton" type="MenuButton" parent="Toolbar/HBoxContainer"]
margin_left = 62.0
margin_right = 155.0
margin_bottom = 20.0
focus_mode = 2
text = "Construction"

[node name="RoadButton" type="MenuButton" parent="Toolbar/HBoxContainer"]
margin_left = 159.0
margin_right = 202.0
margin_bottom = 20.0
focus_mode = 2
text = "Road"

[node name="RailButton" type="MenuButton" parent="Toolbar/HBoxContainer"]
margin_left = 206.0
margin_right = 241.0
margin_bottom = 20.0
focus_mode = 2
text = "Rail"

[node name="AirButton" type="MenuButton" parent="Toolbar/HBoxContainer"]
margin_left = 245.0
margin_right = 275.0
margin_bottom = 20.0
focus_mode = 2
text = "Air"

[node name="SeaButton" type="MenuButton" parent="Toolbar/HBoxContainer"]
margin_left = 279.0
margin_right = 313.0
margin_bottom = 20.0
focus_mode = 2
text = "Sea"

[node name="VSeparator2" type="VSeparator" parent="Toolbar/HBoxContainer"]
margin_left = 317.0
margin_right = 321.0
margin_bottom = 20.0

[node name="HelpButton" type="MenuButton" parent="Toolbar/HBoxContainer"]
margin_left = 325.0
margin_right = 367.0
margin_bottom = 20.0
focus_mode = 2
text = "Help"

[node name="Statusbar" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -502.0
margin_top = -39.0
margin_right = 502.0
margin_bottom = -10.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Statusbar"]
margin_left = 7.0
margin_top = 7.0
margin_right = 997.0
margin_bottom = 22.0

[node name="DateLabel" type="Label" parent="Statusbar/HBoxContainer"]
margin_right = 38.0
margin_bottom = 14.0
text = "Q1 Y1"

[node name="VSeparator" type="VSeparator" parent="Statusbar/HBoxContainer"]
margin_left = 42.0
margin_right = 46.0
margin_bottom = 15.0

[node name="RichTextLabel" type="RichTextLabel" parent="Statusbar/HBoxContainer"]
margin_left = 50.0
margin_right = 906.0
margin_bottom = 15.0
size_flags_horizontal = 3
fit_content_height = true

[node name="VSeparator2" type="VSeparator" parent="Statusbar/HBoxContainer"]
margin_left = 910.0
margin_right = 914.0
margin_bottom = 15.0

[node name="MoneyLabel" type="Label" parent="Statusbar/HBoxContainer"]
margin_left = 918.0
margin_right = 990.0
margin_bottom = 14.0
text = "$1,000,000"

[connection signal="command_issued" from="Toolbar" to="." method="_on_Toolbar_command_issued"]
